<resources>
    <string name="app_name">Medical Reminder</string>
    <string name="activeMeds">Active meds</string>
    <string name="inactiveTxt">Inactive Meds</string>
    <string name="btnAddMed">add med</string>
    <string name="txtLeft">left</string>
    <string name="btnAddDose">Add Dose</string>
    <string name="DrugPhoto">DrugPhoto</string>
    <string name="backPhoto">Back Photo</string>
    <string name="deletePhoto">Delete Photo</string>
    <string name="editPhoto">Edit Photo</string>
    <string name="txtReminder">Reminders</string>
    <string name="btnSuspend">Suspend</string>
    <string name="txtPrescriptionRefill">Prescription Refill</string>
    <string name="btnRefill">Refill</string>
    <string name="txtHowToUser">How To Use ?</string>
    <string name="done">Done</string>
    <string name="MedicationName">Medication Name</string>
    <string name="Reminders_Time">Reminders Time</string>
    <string name="Schedule">Schedule</string>
    <string name="Strength">Strength</string>
    <string name="Instructions">Instructions</string>
    <string name="icon_avatar">Icon Avatar</string>
    <string name="userName">User Name</string>
    <string name="Home">Home</string>
    <string name="Updates">Updates</string>
    <string name="Medications">Medications</string>
    <string name="more">More</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="FAB_add">add_new_medication</string>
    <string name="Calender">Calender</string>
    <string name="btnAddTaker">add taker</string>
    <string name="txtTitleOfAddTaker">Add Taker</string>
    <string name="name">name</string>
    <string name="todo">TODO</string>
    <string name="Date_Format">dd/mm/yyyy</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="medication_type">Medication Type</string>
    <string name="pills_left">Pills Left</string>
    <string name="reminder_daily">Reminder Daily</string>
    <string name="reminder_fill">Reminder Fill</string>
    <string name="how_often_do_you_take_it">How often do you take it?</string>
    <string name="btnAdd">Add</string>
    <string name="no_of_pills">Pills per time</string>
    <string name="btnChooseTime">Choose Time</string>

    <string-array name="Medication_Type">
        <item>choose type</item>
        <item>Pill</item>
        <item>Solution</item>
        <item>Injection</item>
        <item>Powder</item>
        <item>Drops</item>
        <item>Inhaler</item>
    </string-array>
    <string-array name="Medication_Strength">
        <item>choose strength</item>
        <item>g</item>
        <item>IU</item>
        <item>mcg</item>
        <item>mcg/ml</item>
        <item>mEq</item>
        <item>mL</item>
        <item>%</item>
        <item>mg/g</item>
        <item>mg/cm2</item>
        <item>mg/ml</item>
        <item>mcg/hr</item>
    </string-array>
    <string-array name="Medication_Instructions">
        <item>choose instruction</item>
        <item>Before Eating</item>
        <item>While Eating</item>
        <item>After Eating</item>
        <item>Does not Matter</item>
    </string-array>
    <string-array name="Medication_No_Of_Times">
        <item>choose dose per day</item>
        <item>Once daily</item>
        <item>Twice daily</item>
        <item>3 times a day</item>
        <item>4 times a day</item>
        <item>Only as needed</item>
    </string-array>
    <string-array name="Medication_Recurrence">
        <item>choose recurrence</item>
        <item>Once a week</item>
        <item>Every day</item>
        <item>Every 2 days</item>
        <item>Every 3 days</item>
        <item>2 days a week</item>
        <item>3 days a week</item>
        <item>Every 28 days</item>
        <item>5 days a week</item>
        <item>Only as needed</item>
    </string-array>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgt_password">Forget Your password</string>
    <string name="previsous_logged_with_Google">Previously Logged in with Google+?</string>
    <string name="sign_up">Sign Up</string>
    <string name="edit_medication">Edit Medication</string>
    <string name="txt_sign_up_details">Register to securely back up your data on your server</string>
    <string name="takerList">Taker List</string>
    <string name="txtReminderRefill">How much?</string>
    <string name="recurrence">Recurrence</string>
    <string name="reason_of_medication">Reason of Medication</string>
    <string name="requestScreen">HELP REQUEST</string>
    <string name="btnAccept">ACCEPT</string>
    <string name="btnReject">REJECT</string>
    <string name="requestString">Request</string>
    <string name="add_medication">Add Medication</string>
    <string name="how_much_do_you_get">How much do you get?</string>
    <string name="_1">1</string>
    <string name="dose">Dose:</string>
    <string name="tool_bar_name">ahmd</string>
    <string name="SignInGoogle">Login With Google</string>
    <string name="create_profile">Login</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="gusest">Guest</string>
    <string name="newRegister">New Register ?</string>
    <string name="Register">Register</string>
    <string name="patients_list">Patients List</string>
    <string name="take">TAKE</string>
    <string name="skip">SKIP</string>
    <string name="clickToShowDetails">Click To Show Times</string>
    <string name="untake">UN-Take</string>
    <string name="unSkip">UN-Skip</string>
    <string name="PatientDetails">Patient Details</string>
    <string name="there_is_no_medicine">There is no Medicine</string>
    <string name="channel_name">MedicalReminder</string>
    <string name="channel_description">MedicalDescription</string>
    <string name="snooze">Snooze</string>
    <string name="logout">Logout</string>
    <string name="ignore">ignore</string>
    <string name="takeText">take</string>
    <string name="taker_profile">Taker Profile</string>
</resources>