<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".medicationdrug.view.DisplayMedicationDrug">
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primaryColor">

            <ImageView
                android:id="@+id/imageDrug"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/DrugPhoto"
                app:layout_constraintBottom_toBottomOf="@+id/txtDrugDose"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txtDrugName"
                tools:ignore="ImageContrastCheck"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/txtDrugName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/txtDrugDose"
                app:layout_constraintStart_toEndOf="@+id/imageDrug"
                app:layout_constraintTop_toBottomOf="@+id/imageBack"
                tools:ignore="TextContrastCheck"
                tools:text="adol" />

            <TextView
                android:id="@+id/txtDrugDose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"

                app:layout_constraintStart_toStartOf="@+id/txtDrugName"
                tools:ignore="TextContrastCheck"
                tools:text="50 g" />


            <ImageView
                android:id="@+id/imageBack"
                android:layout_width="@dimen/iconWidth"
                android:layout_height="@dimen/iconHeight"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/backPhoto"
                app:layout_constraintStart_toStartOf="@+id/imageDrug"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_arrow_back_24"
                tools:ignore="ImageContrastCheck" />

            <ImageView
                android:id="@+id/imageDelete"
                android:layout_width="@dimen/iconWidth"
                android:layout_height="@dimen/iconHeight"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/deletePhoto"
                app:layout_constraintEnd_toStartOf="@+id/imageEdit"
                app:layout_constraintTop_toTopOf="@+id/imageBack"
                app:srcCompat="@drawable/ic_baseline_delete_forever_24"
                tools:ignore="ImageContrastCheck" />

            <ImageView
                android:id="@+id/imageEdit"
                android:layout_width="@dimen/iconWidth"
                android:layout_height="@dimen/iconHeight"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/editPhoto"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageDelete"
                app:srcCompat="@drawable/ic_baseline_edit_24"
                tools:ignore="ImageContrastCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnAddDose"
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="@dimen/buttonHeight"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/primaryColor"
        android:backgroundTintMode="add"
        android:text="@string/btnAddDose"
        android:textColor="@color/white"
        android:textSize="@dimen/buttonFontSize"
        app:cornerRadius="@dimen/buttonCornerRadius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnSuspend"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/primaryColor"
        android:text="@string/btnSuspend"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView1"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <Button
        android:id="@+id/btnRefill"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primaryColor"
        android:text="@string/btnRefill"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/btnSuspend"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/txtReminder"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txtPrescriptionRefill"
        android:textColor="@color/primaryText"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/txtReminderDoseTime"
        app:layout_constraintTop_toBottomOf="@+id/txtReminderDoseTime" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txtHowToUser"
        android:textColor="@color/primaryText"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/txtPrescriptionRefill"
        app:layout_constraintTop_toBottomOf="@+id/txtPrescriptionRefill" />

    <TextView
        android:id="@+id/txtReminderDuration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView1"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        tools:text="Every day, take for 10 days" />

    <TextView
        android:id="@+id/txtReminderDoseTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/txtReminderDuration"
        app:layout_constraintTop_toBottomOf="@+id/txtReminderDuration"
        tools:text="8:00 AM" />

    <TextView
        android:id="@+id/txtReminderPills"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        app:layout_constraintStart_toEndOf="@+id/txtReminderDoseTime"
        app:layout_constraintTop_toTopOf="@+id/txtReminderDoseTime"
        tools:text="take (1) pills" />

    <TextView
        android:id="@+id/txtPrescriptionRefill"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:text="3 pills Left Refill reminder:" />

    <TextView
        android:id="@+id/txtHowToUse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:text="After Dinner" />
</androidx.constraintlayout.widget.ConstraintLayout>