<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addmedication.view.AddMedication">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/MedicationNameLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:hint="@string/MedicationName"
        app:endIconMode="clear_text"
        app:helperText="Required*"
        app:helperTextTextColor="@color/car_ui_ime_wide_screen_error_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtMedicneName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#757575"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MedicationNameLayout">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/medication_type" />

        <Spinner
            android:id="@+id/spinneMedicationType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:minHeight="@dimen/_37sdp"
            android:spinnerMode="dropdown"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/Strength">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtMedicationStrengthNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/_37sdp"
                android:textColorHint="#757575"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/spinnerMedicationStrengthWeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="@dimen/_37sdp"
            android:spinnerMode="dropdown"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/calendersLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:id="@+id/startDateLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:id="@+id/startDateButton"
                android:layout_width="0dp"
                android:layout_height="@dimen/buttonHeight"
                android:layout_weight="1"
                android:backgroundTint="@color/primaryColor"
                android:text="@string/start_date"
                app:cornerRadius="@dimen/buttonCornerRadius"
                tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/startDateSelected"
                android:layout_width="0dp"
                android:layout_height="@dimen/buttonHeight"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/Date_Format"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/stopDateLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:id="@+id/endDateButton"
                android:layout_width="0dp"
                android:layout_height="@dimen/buttonHeight"
                android:layout_weight="1"
                android:backgroundTint="@color/primaryColor"
                android:text="@string/end_date"
                app:cornerRadius="@dimen/buttonCornerRadius"
                tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/endDateSelected"
                android:layout_width="0dp"
                android:layout_height="@dimen/buttonHeight"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/Date_Format"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LinearLayout6">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Instructions" />

        <Spinner
            android:id="@+id/spinnerMedicationInstructions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:minHeight="@dimen/_37sdp"
            android:spinnerMode="dropdown"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/MedicationPillsLeftLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:hint="@string/pills_left"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPillsLeft"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#757575"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/reminderDailySwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/reminder_daily"
        app:layout_constraintStart_toStartOf="@+id/MedicationPillsLeftLayout"
        app:layout_constraintTop_toBottomOf="@+id/MedicationPillsLeftLayout" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/reminderFillSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reminder_fill"
        app:layout_constraintEnd_toEndOf="@+id/MedicationPillsLeftLayout"
        app:layout_constraintTop_toTopOf="@+id/reminderDailySwitch" />


    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendersLinearLayout">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/how_often_do_you_take_it" />

        <Spinner
            android:id="@+id/spinnerMedicationNoOfTimes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:minHeight="@dimen/_37sdp"
            android:spinnerMode="dropdown"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="@dimen/buttonHeight"
        android:layout_marginTop="@dimen/_12sdp"
        android:backgroundTint="@color/primaryColor"
        android:text="@string/btnAdd"
        app:cornerRadius="@dimen/buttonCornerRadius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reminderDailySwitch"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

    <LinearLayout
        android:id="@+id/LinearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/no_of_pills">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtMedicationTakePillsNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColorHint="#757575"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnChooseTime"
            android:layout_width="0dp"
            android:layout_height="@dimen/buttonHeight"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_weight="2"
            android:backgroundTint="@color/primaryColor"
            android:gravity="center"
            android:text="@string/btnChooseTime"
            app:cornerRadius="@dimen/buttonCornerRadius"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>